<resources>
    <string name="app_name">Design</string>
    <string name="roostio">Roostio</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="forget">Forget your password</string>
    <string name="email">email address</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an Account
        <u>__________________</u></string>
    <string name="full_name">full name</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="signup_upper">SIGN UP</string>
    <string name="login_upper">LOG IN</string>
</resources>