<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/activity_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/roostio"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/username_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:backgroundTint="@color/white"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableStart="@drawable/user_icon"
        android:drawableTint="@color/white"
        android:hint="@string/username"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:backgroundTint="@color/white"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableTint="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/white" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/remember"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/login_button_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_corners_login_button"
        android:text="@string/login"
        android:textColor="@color/light_pink" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:layout_marginTop="@dimen/margin_top"
        app:backgroundTint="@null"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners_signup_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/forget"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        android:layout_marginEnd="@dimen/margin_start_and_end"/>

</LinearLayout>