<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical"
    tools:context=".SignIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_baseline_warning_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="instan"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:paddingStart="110dp"
        android:paddingBottom="@dimen/padding_bottom"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:backgroundTint="@color/red"
        android:hint="********"
        android:paddingStart="135dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:background="@drawable/rounded_corners_signin_button"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="150dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="40dp"
            android:text="|"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="11dp"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="18sp"

            />
    </LinearLayout>
</LinearLayout>